# mal

./: .gitignore  Makefile.impls  make-test-5.sh  runtest.py
impls/fsharp.2/: Makefile  core.fs  functions.fs  printer.fs  reader.fs  step0_repl.fs  step1_read_print.fs  step2_eval.fs  terminal.cs  types.fs
impls/rust-2/: Cargo.toml  Makefile  core.rs  env.rs  functions.rs  history.txt  printer.rs  reader.rs  step0_repl.rs  step1_read_print.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  step5_tco.rs  step6_file.rs  types.rs
impls/tests/: step4_if_fn_do.mal  step6_file.mal
impls/zig.2/: build.py  build.zig  build.zig.zon  core.zig  env.zig  history.txt  printer.zig  reader.zig  shared.zig  step0_repl.zig  step1_read_print.zig  step2_eval.zig  step3_env.zig  step4_if_fn_do.zig  step5_tco.zig  step6_file.zig  step7_quote.zig  step8_macros.zig  step9_try.zig  types.zig
