[package]
name = "rust-2"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
regex = "1.11.1"
rustyline = "16.0.0"

[[bin]]
name = "step0_repl"
path = "step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "step2_eval.rs"
